<resources>
    <string name="app_name">Grocery List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="add_grocery">Add Grocery</string>
    <string name="enter_grocery_name">Enter Grocery Name</string>
    <string name="enter_grocery_price">Enter Grocery Price</string>
    
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="all_list">All List</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>