<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/bottomNavFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.grocerylist.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.grocerylist.SecondFragment"
        android:label="@string/add_grocery"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_SecondFragment_to_bottomNavFragment"
            app:destination="@id/bottomNavFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/bottomNavFragment"
        android:name="com.example.BottomNavFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_bottom_nav" >
        <action
            android:id="@+id/action_bottomNavFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
</navigation>