<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".SecondFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2" />

    <TextView
        android:id="@+id/tvGroceryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_grocery_name"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/guidelineName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etGroceryNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeColor="#FFF"
        app:boxBackgroundColor="#FFF"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvGroceryName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etGroceryName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:background="@drawable/ic_white_rectangle" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvGroceryPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_grocery_price"
        android:textSize="16sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/etGroceryNameLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etGroceryPriceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeColor="#FFF"
        app:boxBackgroundColor="#FFF"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvGroceryPrice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etGroceryPrice"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:background="@drawable/ic_white_rectangle" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAddGrocery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_grocery"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etGroceryPriceLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>